--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ws": "^7.4.0"
+    "express": "^4.17.1",
+    "socket.io": "^3.0.1"
   }
 }
